--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -6,14 +6,12 @@ name: Deploy to Firebase Hosting on merge
   push:
     branches:
       - main
-    paths:
-      - "frontend/**"
 jobs:
   build_and_deploy:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - run: 'npm ci && npm run build'
+      - run: 'cd frontend && npm ci && npm run build'
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
