--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -12,9 +12,10 @@ jobs:
         working-directory: frontend
     steps:
       - uses: actions/checkout@v3
-      - run: 'npm ci && npm run build'
+      - run: 'npm install && npm ci && npm run build'
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
           firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_CLOUDRUN_TEST_383809 }}'
           projectId: cloudrun-test-383809
+          entryPoint: "./frontend"
